--- a/src/styles/themes/proton/sidebar/panel.tabs.styl
+++ b/src/styles/themes/proton/sidebar/panel.tabs.styl
@@ -3,11 +3,11 @@
 #root
   --ntb-padding: var(--general-margin)
   --ntb-border-radius: var(--general-border-radius)
-  --ntb-btn-height: 28px
-#root[data-density="compact"]
-  --ntb-btn-height: 26px
-#root[data-density="loose"]
   --ntb-btn-height: 30px
+#root[data-density="compact"]
+  --ntb-btn-height: 28px
+#root[data-density="loose"]
+  --ntb-btn-height: 32px
 
 .TabsPanel .container
   position: relative
