--- a/src/styles/themes/proton/sidebar/tab.styl
+++ b/src/styles/themes/proton/sidebar/tab.styl
@@ -3,29 +3,30 @@
 #root
   --tabs-pinned-height: 30px
   --tabs-pinned-width: 30px
-  --tabs-height: 28px
+  --tabs-height: 30px
   --tabs-margin: var(--general-margin)
   --tabs-indent: 10px
   --tabs-font: rem(16) sans-serif
   --tabs-count-font: rem(10) sans-serif
   --tabs-border-radius: var(--general-border-radius)
-  --tabs-inner-gap: 4px
+  --tabs-inner-gap: 5px
   --tabs-close-btn-margin: 2px
   --tabs-audio-btn-width: 22px
 #root[data-density="compact"]
   --tabs-pinned-height: 28px
   --tabs-pinned-width: 28px
-  --tabs-height: 26px
+  --tabs-height: 28px
   --tabs-indent: 8px
-  --tabs-inner-gap: 3px
+  --tabs-inner-gap: 4px
   --tabs-close-btn-margin: 1px
   --tabs-audio-btn-width: 20px
 #root[data-density="loose"]
   --tabs-pinned-height: 32px
   --tabs-pinned-width: 32px
-  --tabs-height: 30px
+  --tabs-height: 32px
   --tabs-indent: 12px
-  --tabs-inner-gap: 4px
+  --tabs-inner-gap: 5px
+  --tabs-close-btn-margin: 3px
 #root[data-frame-color-scheme="dark"]
   --tabs-progress-bg: #ffffff16
   --tabs-lvl-opacity: .16
